# fablab-metrics

./: .env  .gitignore  README.md  middleware.ts  package-lock.json  package.json  pyproject.toml  railpack.json  railway.toml  requirements.txt  tailwind.config.ts  tsconfig.json
app/: layout.tsx  page.tsx
app/api/refresh/: route.ts
app/api/status/: route.ts
app/login/: page.tsx
dataloader/: data_generator.py  dates.py  db.py  fabman.py  main.py  reenio.py  settings.py
dataloader/members/: constants.py  extract.py  transform.py  write.py
dataloader/resources/: extract.py  transform.py  write.py
dataloader/tours/: extract.py  transform.py  write.py
dataloader/utils/: dict.py  dict_test.py
fablab-metrics/: env.ts  l10n.ts
fablab-metrics/auth/: LogoutButton.tsx  actions.ts  hasher.ts
fablab-metrics/components/: Header.tsx  useMetrics.ts  usePackages.ts  useToursSource.ts  useTrainingCourses.ts
fablab-metrics/components/metrics/: ActiveMembersByPackage.tsx  MemberVisits.tsx  PackageChangesByMonth.tsx  PackagesByGender.tsx  PaidMembershipsByGender.tsx  ResourceUsage.tsx  TotalMembersByPackage.tsx  TotalToursReservations.tsx  ToursMembers.tsx  (+4 more)
fablab-metrics/ui/: DateRangeDropdown.tsx  DateSelector.tsx  DateZoomSelector.tsx  MemberPackagesDropdown.tsx  MembersWithoutPackage.tsx  SectionHeading.tsx  SettingsDialog.tsx  TrainingsByMemberInfoDialog.tsx  useChartCommonProps.ts  useDateRange.tsx  useIgnoredMemberPackages.ts  useMemberPackageFilter.tsx  useRefresh.ts  useResources.ts  useStatus.tsx
fablab-metrics/utils/: array.ts  chart.ts  date.ts
(+7 files in other folders)
