[tool.poetry]
name = "fablab-metrics"
version = "0.1.0"
description = ""
authors = ["Tomáš Ehrlich <tomas.ehrlich@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-dateutil = "^2.9.0.post0"
requests = "^2.32.3"
pydantic-settings = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
